2011-01-02 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/egg-desktop-file.c:
	Get ride of tests for Gtk+ 2.12.0 as this is the minimal required version.

	* src/nact/base-keysyms.h:
	* src/nact/egg-sm-client-private.h:
	* src/nact/egg-sm-client-xsmp.c: 
	* src/nact/nact-add-capability-dialog.c:
	* src/nact/nact-add-scheme-dialog.c:
	* src/nact/nact-main-tab.c: Use GTK_CHECK_VERSION macro.

	* configure.ac:
	* m4/na-check-for-gtk.m4:
	Move back gtk_required variable to improve readibility of configure.ac.

2011-01-01 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Post release version bump.

	* NEWS: Update NEWS before release.

	* src/plugin-menu/nautilus-actions.c (create_root_menu):
	Update the root menu label to better reflect the product name.

	* src/nact/nautilus-actions-config-tool.ui:
	Use gtk-find instead of gtk-find-and-replace stock icon for browse buttons.

	* src/nact/nact-iaction-tab.c (nact_iaction_tab_initial_load_toplevel):
	Display again stock icons in NACT.
	Fix #638461 - Stock icons are no more displayed in NACT.

	* Almost all files modified:
	Update copyright message.
	Set Nautilus-Actions as being the actual official product name.

	* src/core/na-selected-info.c (new_from_nautilus_file_info):
	Fix pathname breakdown for 'x-nautilus-desktop:///' URI.
	Fix #638450 - Nautilus crashes when opening Trash or Network.